Security is important, password protect the db with sha256 encrypted password, accept from all IPs that have a valid scram-sha-256 encrypted password and from the stated user. This can be configured to be more strict for a prod db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
       POSTGRES_DB: mydb
       POSTGRES_USER: myuser
       POSTGRES_PASSWORD: mypassword
-      POSTGRES_HOST_AUTH_METHOD: trust
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./db/pg_hba.conf:/var/lib/postgresql/data/pg_hba.conf
     ports:
       - "5432:5432"
   # Env vars defined here since it's a local instance, for production would store these elsewhere
