Stumped by this error for like 2 hours, but it's just a log printing issue. Seems to be buffer size related, but I wasn't able to resolve it yet. Will add more tests after and see what happens. It prints logs up to inserting the 7th or 8th contact here, and then exits, but all 35 contacts are visible when I exec into the sql db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,7 +70,7 @@ services:
     volumes:
       - .:/app
     working_dir: /app
-    # restart: "no"
+    restart: "no"
 
 volumes:
   postgres_data:
